--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/functions-framework": "^3.4.0",
+    "@google-cloud/storage": "^7.9.0",
     "googleapis": "^135.0.0"
   },
   "devDependencies": {
