--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22"
   },
   "scripts": {
-    "start": "functions-framework --target=processVideo --port=8081"
+    "start": "functions-framework --target=processVideo"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
